All Fetch Data can now be sent by text to BotPrepareForWeatherBot.