@@ -1,3 +1,5 @@
+package com.telegramWeather.weather;
+
 import java.net.URI;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
@@ -12,7 +14,8 @@ public class GoogleMapsApiClient extends ApiClient {
 
     @Override
     public URI getUri() throws Exception {
-        String encodedZipcode = URLEncoder.encode(zipcode, StandardCharsets.UTF_8);
+        // Corrected the second parameter to URLEncoder.encode to use the charset name
+        String encodedZipcode = URLEncoder.encode(zipcode, StandardCharsets.UTF_8.name());
         return new URI("https", "maps.googleapis.com", "/maps/api/geocode/json",
                 "address=" + encodedZipcode + "&key=" + apiKey, null);
     }
